# logos-notes

./: .gitignore  ALISHER.md  CLAUDE.md  CLAUDE_NEW.md  CMakeLists.txt  CODEX.md  CODEX_NEW.md  PROJECT_KNOWLEDGE.md  README.md  SECURITY_REVIEW.md  WORKFLOW.md  flake.nix  halt.md  metadata.json  notesforretro.md
.claude/rules/: builder-auditor.md  fergie.md  halt-resume.md  senty.md  session-start.md
assets/: logos-notes.desktop
blog/: 2026-03-12-phase-0.md  2026-03-14-security-hardening.md  2026-03-14-settings-backup-identity.md  2026-03-15-building-immutable-notes-on-logos.md  2026-03-15-hotfixes-and-sandbox-lessons.md  2026-03-15-shared-memory.md  2026-03-17-keycard-integration.md  2026-03-19-issue-44-libkeycard-from-source.md  2026-04-08-keycard-basecamp-migration.md  README.md
docs/: retro-log.md
docs/decisions/: README.md
docs/plans/: README.md  probe-first-appimage-compat.md  v2-storage-autobackup.md
docs/skills/: appimage-module-versioning.md  architecture.md  ecosystem.md  lessons.md  sdk-upgrade-guide.md  transport-abstraction-for-ipc.md  working-baseline.md
docs/upstream/: logos-basecamp-findings.md
issue-drafts/: issue-22-mnemonic-salt-persistence-unchecked.md  issue-23-backup-import-false-success.md  issue-24-phase0-save-false-success.md
lib/keycard/: .gitignore  README.md  libkeycard.h
modules/notes/: manifest.json
plugins/notes_ui/: Main.qml  flake.nix  main.qml  manifest.json  metadata.json  result
plugins/notes_ui/qml/: Main.qml
scripts/: build-libkeycard.sh  fix-lgx.sh  package-lgx.sh  security-review-loop.sh
src/: main.cpp
src/core/: Bip39Wordlist.h  CryptoManager.cpp  CryptoManager.h  DatabaseManager.cpp  DatabaseManager.h  KeyManager.cpp  KeyManager.h  KeycardBridge.cpp  KeycardBridge.h  LibStorageTransport.cpp  LogosStorageTransport.cpp  NotesBackend.cpp  NotesBackend.h  SecureBuffer.h  StorageClient.cpp  StorageClient.h
src/plugin/: NotesPlugin.cpp  NotesPlugin.h  plugin_metadata.json
src/ui/: main.qml
src/ui/components/: PinInput.qml
src/ui/screens/: ImportScreen.qml  NoteScreen.qml  UnlockScreen.qml
tests/: logos_api_stub.cpp  test_account.cpp  test_autobackup.cpp  test_backup.cpp  test_backup_storage.cpp  test_lib_storage_transport.cpp  test_multi_note.cpp  test_note_api.cpp  test_plugin.cpp  test_security.cpp  test_storage_client.cpp
